// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`House Create should render Create Component 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="actionButtons-0-2-2"
  >
    <Button
      className="actionButton-0-2-3"
      onClick={[Function]}
      style={
        Object {
          "marginRight": 5,
        }
      }
      type="primary"
    >
      Create
    </Button>
    <Button
      className="actionButton-0-2-3"
      onClick={[Function]}
    >
      Cancel
    </Button>
  </div>
  <ForwardRef(InternalForm)
    form={
      Object {
        "__INTERNAL__": Object {
          "itemRef": [Function],
        },
        "getFieldError": [Function],
        "getFieldInstance": [Function],
        "getFieldValue": [Function],
        "getFieldsError": [Function],
        "getFieldsValue": [Function],
        "getInternalHooks": [Function],
        "isFieldTouched": [Function],
        "isFieldValidating": [Function],
        "isFieldsTouched": [Function],
        "isFieldsValidating": [Function],
        "resetFields": [Function],
        "scrollToField": [Function],
        "setFields": [Function],
        "setFieldsValue": [Function],
        "submit": [Function],
        "validateFields": [Function],
      }
    }
    initialValues={
      Object {
        "type": 0,
      }
    }
    labelCol={
      Object {
        "span": 3,
      }
    }
    name="house"
    onFinish={[Function]}
    onFinishFailed={[Function]}
    validateMessages={
      Object {
        "required": "\${label} is required!",
      }
    }
    wrapperCol={
      Object {
        "span": 10,
      }
    }
  >
    <FormItem
      label="Street"
      name="street"
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <Input
        disabled={false}
        style={
          Object {
            "borderRadius": 5,
          }
        }
        type="text"
      />
    </FormItem>
    <FormItem
      label="Number"
      name="number"
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <Input
        disabled={false}
        style={
          Object {
            "borderRadius": 5,
          }
        }
        type="text"
      />
    </FormItem>
    <FormItem
      label="Type"
      name="type"
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <ForwardRef(InternalSelect)
        disabled={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Private",
              "value": 0,
            },
            Object {
              "label": "Apartment",
              "value": 1,
            },
          ]
        }
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="User"
      name="userId"
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <ForwardRef(InternalSelect)
        disabled={false}
        options={Array []}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="Area"
      name={
        Array [
          "info",
          "area",
        ]
      }
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <ForwardRef
        disabled={false}
        min={1}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <Title
      level={5}
    >
      Default Indicators
    </Title>
    <FormItem
      label="Cold Water"
      name="coldWater"
    >
      <ForwardRef
        disabled={false}
        min={0}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="Hot Water"
      name="hotWater"
    >
      <ForwardRef
        disabled={false}
        min={0}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="Electricity"
      name="electricity"
    >
      <ForwardRef
        disabled={false}
        min={0}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="Gas"
      name="gas"
    >
      <ForwardRef
        disabled={false}
        min={0}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
  </ForwardRef(InternalForm)>
</div>
`;

exports[`House Edit should get House 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="actionButtons-0-2-2"
  >
    <button
      className="ant-btn ant-btn-primary actionButton-0-2-3"
      onClick={[Function]}
      style={
        Object {
          "marginRight": 5,
        }
      }
      type="button"
    >
      <span>
        Edit
      </span>
    </button>
    <button
      className="ant-btn actionButton-0-2-3"
      onClick={[Function]}
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
  </div>
  <form
    className="ant-form ant-form-horizontal"
    id="house"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className="ant-form-item-required"
          htmlFor="house_street"
          title="Street"
        >
          Street
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <input
              className="ant-input ant-input-disabled"
              disabled={true}
              id="house_street"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className="ant-form-item-required"
          htmlFor="house_number"
          title="Number"
        >
          Number
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <input
              className="ant-input ant-input-disabled"
              disabled={true}
              id="house_number"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className="ant-form-item-required"
          htmlFor="house_type"
          title="Type"
        >
          Type
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <div
              className="ant-select ant-select-single ant-select-show-arrow ant-select-disabled"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
            >
              <div
                className="ant-select-selector"
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <span
                  className="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="house_type_list_0"
                    aria-autocomplete="list"
                    aria-controls="house_type_list"
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-owns="house_type_list"
                    autoComplete="off"
                    className="ant-select-selection-search-input"
                    disabled={true}
                    id="house_type"
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onPaste={[Function]}
                    readOnly={true}
                    role="combobox"
                    style={
                      Object {
                        "opacity": 0,
                      }
                    }
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  className="ant-select-selection-item"
                  title="Private"
                >
                  Private
                </span>
              </div>
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <span
                  aria-label="down"
                  className="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className="ant-form-item-required"
          htmlFor="house_userId"
          title="User"
        >
          User
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <div
              className="ant-select ant-select-single ant-select-show-arrow ant-select-disabled"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
            >
              <div
                className="ant-select-selector"
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <span
                  className="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="house_userId_list_0"
                    aria-autocomplete="list"
                    aria-controls="house_userId_list"
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-owns="house_userId_list"
                    autoComplete="off"
                    className="ant-select-selection-search-input"
                    disabled={true}
                    id="house_userId"
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onPaste={[Function]}
                    readOnly={true}
                    role="combobox"
                    style={
                      Object {
                        "opacity": 0,
                      }
                    }
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  className="ant-select-selection-placeholder"
                />
              </div>
              <span
                aria-hidden={true}
                className="ant-select-arrow"
                onMouseDown={[Function]}
                style={
                  Object {
                    "WebkitUserSelect": "none",
                    "userSelect": "none",
                  }
                }
                unselectable="on"
              >
                <span
                  aria-label="down"
                  className="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className="ant-form-item-required"
          htmlFor="house_info_area"
          title="Area"
        >
          Area
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <div
              className="ant-input-number ant-input-number-disabled"
              onBlur={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
            >
              <div
                className="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled={false}
                  aria-label="Increase Value"
                  className="ant-input-number-handler ant-input-number-handler-up"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    className="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled={false}
                  aria-label="Decrease Value"
                  className="ant-input-number-handler ant-input-number-handler-down"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                className="ant-input-number-input-wrap"
              >
                <input
                  aria-valuemin={1}
                  aria-valuenow={null}
                  autoComplete="off"
                  className="ant-input-number-input"
                  disabled={true}
                  id="house_info_area"
                  onChange={[Function]}
                  role="spinbutton"
                  step={1}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h5
      className="ant-typography"
      style={
        Object {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Default Indicators
    </h5>
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className=""
          htmlFor="house_coldWater"
          title="Cold Water"
        >
          Cold Water
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <div
              className="ant-input-number ant-input-number-disabled"
              onBlur={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
            >
              <div
                className="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled={false}
                  aria-label="Increase Value"
                  className="ant-input-number-handler ant-input-number-handler-up"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    className="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled={false}
                  aria-label="Decrease Value"
                  className="ant-input-number-handler ant-input-number-handler-down"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                className="ant-input-number-input-wrap"
              >
                <input
                  aria-valuemin={0}
                  aria-valuenow={null}
                  autoComplete="off"
                  className="ant-input-number-input"
                  disabled={true}
                  id="house_coldWater"
                  onChange={[Function]}
                  role="spinbutton"
                  step={1}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className=""
          htmlFor="house_hotWater"
          title="Hot Water"
        >
          Hot Water
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <div
              className="ant-input-number ant-input-number-disabled"
              onBlur={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
            >
              <div
                className="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled={false}
                  aria-label="Increase Value"
                  className="ant-input-number-handler ant-input-number-handler-up"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    className="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled={false}
                  aria-label="Decrease Value"
                  className="ant-input-number-handler ant-input-number-handler-down"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                className="ant-input-number-input-wrap"
              >
                <input
                  aria-valuemin={0}
                  aria-valuenow={null}
                  autoComplete="off"
                  className="ant-input-number-input"
                  disabled={true}
                  id="house_hotWater"
                  onChange={[Function]}
                  role="spinbutton"
                  step={1}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className=""
          htmlFor="house_electricity"
          title="Electricity"
        >
          Electricity
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <div
              className="ant-input-number ant-input-number-disabled"
              onBlur={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
            >
              <div
                className="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled={false}
                  aria-label="Increase Value"
                  className="ant-input-number-handler ant-input-number-handler-up"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    className="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled={false}
                  aria-label="Decrease Value"
                  className="ant-input-number-handler ant-input-number-handler-down"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                className="ant-input-number-input-wrap"
              >
                <input
                  aria-valuemin={0}
                  aria-valuenow={null}
                  autoComplete="off"
                  className="ant-input-number-input"
                  disabled={true}
                  id="house_electricity"
                  onChange={[Function]}
                  role="spinbutton"
                  step={1}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={Object {}}
    >
      <div
        className="ant-col ant-col-3 ant-form-item-label"
        style={Object {}}
      >
        <label
          className=""
          htmlFor="house_gas"
          title="Gas"
        >
          Gas
        </label>
      </div>
      <div
        className="ant-col ant-col-10 ant-form-item-control"
        style={Object {}}
      >
        <div
          className="ant-form-item-control-input"
        >
          <div
            className="ant-form-item-control-input-content"
          >
            <div
              className="ant-input-number ant-input-number-disabled"
              onBlur={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              style={
                Object {
                  "borderRadius": 5,
                }
              }
            >
              <div
                className="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled={false}
                  aria-label="Increase Value"
                  className="ant-input-number-handler ant-input-number-handler-up"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    className="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled={false}
                  aria-label="Decrease Value"
                  className="ant-input-number-handler ant-input-number-handler-down"
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                className="ant-input-number-input-wrap"
              >
                <input
                  aria-valuemin={0}
                  aria-valuenow={null}
                  autoComplete="off"
                  className="ant-input-number-input"
                  disabled={true}
                  id="house_gas"
                  onChange={[Function]}
                  role="spinbutton"
                  step={1}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`House Edit should render Edit Component 1`] = `
<div
  className="container-0-2-1"
>
  <div
    className="actionButtons-0-2-2"
  >
    <Button
      className="actionButton-0-2-3"
      onClick={[Function]}
      style={
        Object {
          "marginRight": 5,
        }
      }
      type="primary"
    >
      Edit
    </Button>
    <Button
      className="actionButton-0-2-3"
      onClick={[Function]}
    >
      Cancel
    </Button>
  </div>
  <ForwardRef(InternalForm)
    form={
      Object {
        "__INTERNAL__": Object {
          "itemRef": [Function],
        },
        "getFieldError": [Function],
        "getFieldInstance": [Function],
        "getFieldValue": [Function],
        "getFieldsError": [Function],
        "getFieldsValue": [Function],
        "getInternalHooks": [Function],
        "isFieldTouched": [Function],
        "isFieldValidating": [Function],
        "isFieldsTouched": [Function],
        "isFieldsValidating": [Function],
        "resetFields": [Function],
        "scrollToField": [Function],
        "setFields": [Function],
        "setFieldsValue": [Function],
        "submit": [Function],
        "validateFields": [Function],
      }
    }
    initialValues={
      Object {
        "type": 0,
      }
    }
    labelCol={
      Object {
        "span": 3,
      }
    }
    name="house"
    onFinish={[Function]}
    onFinishFailed={[Function]}
    validateMessages={
      Object {
        "required": "\${label} is required!",
      }
    }
    wrapperCol={
      Object {
        "span": 10,
      }
    }
  >
    <FormItem
      label="Street"
      name="street"
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <Input
        disabled={true}
        style={
          Object {
            "borderRadius": 5,
          }
        }
        type="text"
      />
    </FormItem>
    <FormItem
      label="Number"
      name="number"
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <Input
        disabled={true}
        style={
          Object {
            "borderRadius": 5,
          }
        }
        type="text"
      />
    </FormItem>
    <FormItem
      label="Type"
      name="type"
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <ForwardRef(InternalSelect)
        disabled={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Private",
              "value": 0,
            },
            Object {
              "label": "Apartment",
              "value": 1,
            },
          ]
        }
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="User"
      name="userId"
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <ForwardRef(InternalSelect)
        disabled={true}
        options={Array []}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="Area"
      name={
        Array [
          "info",
          "area",
        ]
      }
      rules={
        Array [
          Object {
            "required": true,
          },
        ]
      }
    >
      <ForwardRef
        disabled={true}
        min={1}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <Title
      level={5}
    >
      Default Indicators
    </Title>
    <FormItem
      label="Cold Water"
      name="coldWater"
    >
      <ForwardRef
        disabled={true}
        min={0}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="Hot Water"
      name="hotWater"
    >
      <ForwardRef
        disabled={true}
        min={0}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="Electricity"
      name="electricity"
    >
      <ForwardRef
        disabled={true}
        min={0}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
    <FormItem
      label="Gas"
      name="gas"
    >
      <ForwardRef
        disabled={true}
        min={0}
        style={
          Object {
            "borderRadius": 5,
          }
        }
      />
    </FormItem>
  </ForwardRef(InternalForm)>
</div>
`;

exports[`House List should render List Component 1`] = `
<div
  className="container-0-2-4"
>
  <div
    className="actionButtons-0-2-5"
  >
    <Button
      className="actionButton-0-2-6"
      onClick={[Function]}
      type="primary"
    >
      Create
    </Button>
  </div>
  <Table
    columns={
      Array [
        Object {
          "dataIndex": "street",
          "search": true,
          "sorter": true,
          "title": "Street",
        },
        Object {
          "dataIndex": "number",
          "search": true,
          "sorter": true,
          "title": "Number",
        },
        Object {
          "dataIndex": "type",
          "filters": Array [
            Object {
              "text": "Private",
              "value": "0",
            },
            Object {
              "text": "Apartment",
              "value": "1",
            },
          ],
          "render": [Function],
          "sorter": true,
          "title": "Type",
        },
        Object {
          "dataIndex": "",
          "render": [Function],
          "title": "",
        },
      ]
    }
    data={Array []}
    getData={[Function]}
    loading={false}
    onRow={[Function]}
    pager={
      Object {
        "current": 1,
        "pageSize": 10,
        "total": 0,
      }
    }
    setPager={[Function]}
  />
</div>
`;
